--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,26 +1,31 @@
- @import 'https://fonts.googleapis.com/css?family=Roboto+Mono:100';
- html,
- body {
-     background: url(bg.jpg) no-repeat center center;
-     background-size: cover;
-     font-family: 'Roboto Mono', monospace;
-     height: 100vh;
- }
+html,
+body {
+ background: url("../img/bg1.jpg") no-repeat center center;
+ background-size: cover;
+ font-family: 'Roboto Mono', monospace;
+ height: 100vh;
+}
+
+.container {
+ height: 100%;
+ width: 100%;
+ align-items: center;
+ display: grid;
+}
+
+.text {
+ margin: auto auto;
+ font-weight: 500;
+ font-size: 60px;
+ color: #fafafa;
+}
+
+.dud {
+ color: #e6e6e6;
+}
+
+/* BUTTON STYLING*/
  
- .container {
-     height: 100%;
-     width: 100%;
-     align-items: center;
-     display: grid;
- }
- 
- .text {
-     margin: auto auto;
-     font-weight: 100;
-     font-size: 28px;
-     color: #fafafa;
- }
- 
- .dud {
-     color: #e6e6e6;
+.buttons {
+ font-family: 'Roboto Mono', monospace;
  }
